--- a/index.html
+++ b/index.html
@@ -10,13 +10,11 @@
 </head>
 <body>
 
-<div class="stars">
-	</div>
-<div class="asteroid">
-</div>
+<div class="stars"></div>
 
-<div class="ship">
-</div>
+<div class="asteroid"></div>
+
+<div class="ship"></div>
 
 </body>
 </html>
